# yosuahres.github.io

./: LICENSE  README.md  _config.yml
detection_atas/: CMakeLists.txt  package.xml
detection_atas/src/: image_converter.cpp  labels.txt  node_detectnet.cpp  rival1atas.onnx.sha256sum  video_cv.cpp
detection_bawah/: CMakeLists.txt  package.xml
detection_bawah/src/: labelbaru.onnx.sha256sum  labels.txt  node_detectnet.cpp  roboflow2.onnx.sha256sum
final-project-k7-main/: README.md  package-lock.json
final-project-k7-main/api/: index.php
final-project-k7-main/app/Http/Controllers/: KategoriController.php  PostController.php  ProfileController.php
final-project-k7-main/app/Http/Controllers/Auth/: RegisterController.php
final-project-k7-main/app/Models/: Category.php  Post.php  Profile.php  User.php
final-project-k7-main/app/Providers/: RouteServiceProvider.php
final-project-k7-main/database/migrations/: 2023_09_23_015439_create_post_table.php  2023_09_23_015504_create_profile_table.php  2023_09_23_025530_create_comment_table.php  2023_09_23_025553_create_postkategori_table.php
final-project-k7-main/resources/views/auth/: register.blade.php
final-project-k7-main/routes/: web.php
include/romusarival/: camera.hpp  config.hpp  filter.hpp  main.hpp  move.hpp  sequence.hpp
input_atas/: CMakeLists.txt  package.xml
input_atas/include/: image_converter.h
input_atas/src/: input.cpp
input_bawah/: CMakeLists.txt  package.xml
input_bawah/include/: ros_compat.h
input_bawah/src/: detectNet.cpp  labels.txt  node_video_source.cpp
